# many-snmp

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test_import_snmp.py
.github/workflows/: Pylint_2  black_lint.yml  codeql.yml  django.yml  lint.yml  pylint.yml  tests.yml
Printer_SNMP_EN_plus/: asgi.py  settings.py  wsgi.py
many-snmp/: asgi.py  settings.py  urls.py  wsgi.py
many_snmp/: asgi.py  settings.py  urls.py  wsgi.py
printers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
printers/migrations/: 0001_initial.py  0002_snmpoid_snmphistory.py  0003_printer_community.py  0004_snmpoid_user_defined_alter_snmpoid_category.py  0005_printer_mac_addresses_alter_printer_model.py
printers/utils/: oid_utils.py
snmp-service/: package-lock.json  package.json  server.js  worker.js
static/css/: scripts.js
static/js/: printer_management.js
templates/: base.html
templates/Printers/: list.html
templates/modals/: add_edit_printer_modal.html  snmp_result_modal.html
