[tool.poetry]
package-mode = false
name = "many-snmp"
version = "0.1.0"
description = ""
authors = ["sosnineo <sosnineo2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dev-dependencies]
snmpsim = "^0.4.6"
flake8 = "^7.0.0"
black = "^24.3.0"
